# chess-tactics-cards

./: .gitignore  LICENSE  Makefile  README.md  extract.py  main.py  migrate_pyfsrs_v2.py  prepare_deck.py  prepare_sqlite.py  pyproject.toml  requirements.txt  show_due.py
chesscards/: card.py  create_revlog.py  extract.py  main.py  prepare_anki_deck.py  prepare_deck.py  prepare_sqlite.py  show_due.py
tests/: conftest.py  test_card.py  test_extract.py  test_main.py  test_prepare_sqlite.py  test_show_due.py
tests/data/: book_card.json  extract.csv  extract_single.csv  legacy_card.json  review_log.jsonl  sample.csv  updated_card.json
